# cg_practice_project

./: .gitignore
first_opengl_example/: CMakeLists.txt  Dependency.cmake
first_opengl_example/src/: main.cpp
opengl_example/: CMakeLists.txt  Dependency.cmake  imgui.ini
opengl_example/shader/: lighting.fs  lighting.vs  simple.fs  simple.vs  texture.fs
opengl_example/src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp
